--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -933,7 +933,7 @@
     <string name="nfc_quick_toggle_summary" product="default" msgid="1460871052409162980">"Permitir a troca de dados quando o telemóvel toca num dispositivo NFC."</string>
     <string name="nfc_disclaimer_title" msgid="3696580694485048039">"Ativar NFC"</string>
     <string name="nfc_disclaimer_content" msgid="8256675597551036207">"O NFC troca dados entre este dispositivo e outros dispositivos ou alvos próximos, tais como terminais de pagamento, leitores de acesso e anúncios ou etiquetas interativos."</string>
-    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"Solicitar o desbloqueio do dispositivo para o NFC"</string>
+    <string name="nfc_secure_settings_title" msgid="4906958426927741485">"Pedir o desbloqueio do dispositivo para o NFC"</string>
     <string name="nfc_secure_toggle_summary" product="default" msgid="407654335737959071">"Permita a utilização do NFC apenas quando o ecrã está desbloqueado"</string>
     <string name="android_beam_settings_title" msgid="2797963824490671295">"Android Beam"</string>
     <string name="android_beam_on_summary" msgid="6067720758437490896">"Pronto para transmitir conteúdo da aplicação via NFC"</string>
@@ -1593,8 +1593,8 @@
     <string name="dlg_confirm_unmount_text" product="default" msgid="3887768438615563697">"Se desmontar o cartão SD, algumas das aplicações em utilização serão interrompidas e poderão ficar indisponíveis até voltar a montar o cartão SD."</string>
     <string name="dlg_error_unmount_title" product="nosdcard" msgid="2205587942165199845"></string>
     <string name="dlg_error_unmount_title" product="default" msgid="2205587942165199845"></string>
-    <string name="dlg_error_unmount_text" product="nosdcard" msgid="7876201891724279436">"Não foi possível desmontar a memória de armazenamento USB. Tente novamente mais tarde."</string>
-    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"Não é possível desmontar o cartão SD. Tente novamente mais tarde."</string>
+    <string name="dlg_error_unmount_text" product="nosdcard" msgid="7876201891724279436">"Não foi possível desmontar a memória de armazenamento USB. Tente mais tarde."</string>
+    <string name="dlg_error_unmount_text" product="default" msgid="2185659901137961711">"Não é possível desmontar o cartão SD. Tente mais tarde."</string>
     <string name="unmount_inform_text" product="nosdcard" msgid="5932607205977999175">"O armazenamento USB será desmontado."</string>
     <string name="unmount_inform_text" product="default" msgid="716578785262713312">"O cartão SD será desmontado."</string>
     <string name="sd_ejecting_title" msgid="1641122369013595273">"A desmontar"</string>
@@ -3329,7 +3329,7 @@
     <string name="vpn_lockdown_summary" msgid="4700625960550559029">"Selecione um perfil de VPN para permanecer sempre ligado. O tráfego de rede só será permitido quando ligado a esta VPN."</string>
     <string name="vpn_lockdown_none" msgid="455915403560910517">"Nenhuma"</string>
     <string name="vpn_lockdown_config_error" msgid="1992071316416371316">"A VPN sempre ativa requer um endereço IP de servidor e DNS."</string>
-    <string name="vpn_no_network" msgid="7187593680049843763">"Não existe ligação à rede. Tente novamente mais tarde."</string>
+    <string name="vpn_no_network" msgid="7187593680049843763">"Não existe ligação à rede. Tente mais tarde."</string>
     <string name="vpn_disconnected" msgid="7694522069957717501">"Desligado da VPN"</string>
     <string name="vpn_disconnected_summary" msgid="721699709491697712">"Nenhuma"</string>
     <string name="vpn_missing_cert" msgid="5397309964971068272">"Falta um certificado. Experimente editar o perfil."</string>
@@ -5310,7 +5310,7 @@
     <string name="load_networks_progress" msgid="4717874401621250401">"A pesquisar…"</string>
     <string name="register_on_network" msgid="2169662800750709709">"A registar na rede <xliff:g id="NETWORK">%s</xliff:g>…"</string>
     <string name="not_allowed" msgid="5756935665192962915">"O cartão SIM não permite uma ligação a esta rede."</string>
-    <string name="connect_later" msgid="2330538069949281352">"De momento, não é possível estabelecer ligação a esta rede. Tente novamente mais tarde."</string>
+    <string name="connect_later" msgid="2330538069949281352">"De momento, não é possível estabelecer ligação a esta rede. Tente mais tarde."</string>
     <string name="registration_done" msgid="1750434215698850123">"Registado na rede."</string>
     <string name="select_automatically" msgid="2419752566747259155">"Selecionar automaticamente a rede"</string>
     <string name="carrier_settings_title" msgid="6959295328730560529">"Definições do operador"</string>
